# mai-oop-lab-works

./: CMakeLists.txt  README.md
LW1/: CMakeLists.txt  main.cpp
LW1/include/: solver.h
LW1/src/: solver.cpp
LW1/test/: test_solver.cpp
LW1/tests/: test_solver.cpp
LW2/: CMakeLists.txt  main.cpp
LW2/include/: array.h  exceptions.h  hex.h  tools.h
LW2/src/: array.cpp  exceptions.cpp  hex.cpp  tools.cpp
LW2/test/: test_array.cpp  test_hex.cpp  test_tools.cpp
LW3/: CMakeLists.txt  main.cpp
LW3/include/: array.h  exceptions.h  figure.h  point.h  rectangle.h  square.h  tools.h  trapeze.h
LW3/src/: array.cpp  figure.cpp  point.cpp  rectangle.cpp  square.cpp  tools.cpp  trapeze.cpp
LW3/test/: test_array.cpp  test_figure.cpp  test_point.cpp  test_rectangle.cpp  test_square.cpp  test_tools.cpp
LW4/: CMakeLists.txt  main.cpp
LW4/include/: array.h  figure.h  point.h  rectangle.h  square.h  tools.h  trapeze.h
LW4/src/: figure.cpp  rectangle.cpp  square.cpp  tools.cpp  trapeze.cpp
LW4/test/: test_array.cpp  test_figure.cpp  test_rectangle.cpp  test_square.cpp  test_trapeze.cpp
LW5/: CMakeLists.txt  main.cpp
LW5/include/: exceptions.h  stack.h  stack_memory_resource.h
LW5/src/: exceptions.cpp  stack_memory_resource.cpp
LW5/test/: test_stack.cpp  test_stack_memory_resource.cpp
LW6/: CMakeLists.txt  main.cpp
LW6/include/: array.h  editor.h  factory.h  npc.h  npcs.h  observer.h  tools.h  visitor.h
LW6/src/: editor.cpp  exceptions.cpp  factory.cpp  npc.cpp  npcs.cpp  observer.cpp  tools.cpp  visitor.cpp
LW6/test/: test_editor.cpp  test_factory.cpp  test_npc.cpp  test_npcs.cpp  test_observer.cpp  test_tools.cpp  test_visitor.cpp
LW7/: CMakeLists.txt  main.cpp
LW7/include/: editor.h  exceptions.h  factory.h  mutex.h  npc.h  observer.h  tools.h  visitor.h
LW7/src/: editor.cpp  factory.cpp  npc.cpp  observer.cpp  tools.cpp  visitor.cpp
LW7/test/: test_editor.cpp  test_factory.cpp  test_npc.cpp  test_observer.cpp  test_tools.cpp  test_visitor.cpp
